--- a/diskret.qmd
+++ b/diskret.qmd
@@ -325,7 +325,7 @@ plot(x, dunif(x, 0,6),
      ylim=c(0, 0.20), 
      xlab="X", 
      ylab=expression("Wahrscheinlichkeit " * f(x)), 
-     main="Diskrete Gleichverteilung der Wahrscheinlichkeiten U(1,6)", 
+     main="Diskrete Gleichverteilung\n der Wahrscheinlichkeiten U(1,6)", 
      type="p", 
      pch=16, 
      col="steelblue",
@@ -647,7 +647,7 @@ plot(x, dpois(x, lambda=5),
      ylim=c(0, 0.2), 
      xlab="X", 
      ylab=expression("Wahrscheinlichkeit " * f(x)), 
-     main="Binomial and Poisson Wahrscheinlichkeitsverteilungen", 
+     main="Binomial- und Poisson-\n Wahrscheinlichkeitsverteilungen", 
      type="h", 
      col="steelblue")
 points(x, dbinom(x, size=10, prob=0.5), type="p", pch=16, col="darkgreen")
